--- a/README.tex
+++ b/README.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-
+\usepackage{graphicx}
 \usepackage{amsmath}
 
 \begin{document}
@@ -15,25 +15,27 @@ In this document, we present a model to investigate the dynamics of human questi
 
 \section{Perception, Understanding, and Their Dynamics}
 
-Humans perceive reality through various categories of perception. Over time, these perceptions evolve and form clusters of understanding. To truly assess the consistency of these perceptions, one would have to conduct a longitudinal study spanning a human's lifetime. Through such an investigation, we would be able to measure the perception room by means of multidimensional scaling, observing the rate of change in the aspects significant to the individual. This concept aligns with the ideas of Paul Watzlawick, who stressed the importance of understanding one's own perceptions in the process of communication.
+Humans perceive reality through various categories of perception. Over time, these perceptions evolve and form clusters of understanding. To truly assess the consistency of these perceptions, one would have to conduct a longitudinal study spanning a human's lifetime. Through such an investigation, we would be able to measure the perception space by means of multidimensional scaling, observing the rate of change in the aspects significant to the individual.
 
 However, it is essential to recognize that it is impossible to identify unknown schemes or mechanisms. This highlights the need to understand one's own cognitive structures. By identifying the boundaries of our mindset, we can challenge and transcend them. As stated by Einstein, our theories often determine our observations, and we tend to observe what confirms our theories, thereby reinforcing our beliefs.
 
+\clearpage
 \section{Questioning and Understanding: A Model}
 
 The described dynamics are based on two key assumptions:
 \begin{enumerate}
-    \item We can understand the dynamics and mechanisms of the human mind's data processing to a certain extent when we compare it against reality.
-    \item There is a limited amount of time (e.g., a lifetime) for identifying these mechanisms.
+    \item We can understand the dynamics and mechanisms of the human mind's data processing to a certain extent when we compare it in two layers. The second layer is predicated on achieving the first layer, as it requires a broad understanding of personal questioning patterns:
+        \begin{itemize}
+        \item \textit{First Layer - Local to Global Perception of Own Questioning Patterns}: Questioning is a constant process. Reality aligns with it to a certain degree. Consequently, our personal reality is substantially shaped by the way we ask questions. This leads to the understanding that questioning is the independent variable and reality the dependent one. Thus, our prognoses are progressively fine-tuned, not to reality, but to the underlying patterns of how we question reality.
+        \item \textit{Second Layer - Establishing Feedback Loops of Global Perception of Own Questioning Patterns to Reality}: Once a comprehensive understanding of personal questioning patterns has been achieved, we can then benchmark these against reality. However, we are limited by time. This means we have only a finite number of moments to align our abstractions against reality and discover the fundamental patterns of our questioning. As such, moments not spent questioning, not formulating prognoses, or not pushing the boundaries of our sense perceptions can be considered 'wasted' from the perspective of understanding development.
+        \end{itemize}
 \end{enumerate}
+\label{sec:assumptions}
 
-Questioning is a constant process. The reality aligns with it to a certain degree. Thus, our reality is shaped substantially by the way we ask questions, leading to the conclusion that questioning would be the independent variable and reality the dependent one. Consequently, the categories of our prognosis are progressively fine-tuned, not to reality but to the underlying patterns of how we question reality.
-
-However, we are limited by time, meaning that we have only a finite number of moments to align our abstractions against reality and discover the fundamental patterns of our questioning. Therefore, moments not spent questioning, not formulating prognoses, or not pushing the boundaries of our sense perceptions can be considered 'wasted' from the perspective of understanding development.
 
 \section{Implementation and Further Discussion}
 
-We propose a Python class \texttt{Person}, which allows us to simulate these complex processes over time under various initial conditions and rates of change. While this model may be a simplification of reality, it provides a robust framework for examining the intricate dynamics of human questioning and understanding development.
+We propose a Python class \texttt{Person}, which allows to plot the formulated assumptions up until the second layer.
 
 \section{Mathematical Model}
 
@@ -43,30 +45,47 @@ The frequency $F_t$ of questioning at time $t$ is modeled as an exponential deca
 F_t = F_0 \exp(-r_F t)
 \]
 
-The level of understanding $U_t$ at time $t$ is modeled as a linear growth process with an initial understanding $U_0$ and a rate of increase $r_U$:
+With the understanding that an exponential increase in question quality and an exponential decrease in question frequency leads to a nonlinear progression of understanding, we model the level of understanding $U_t$ at time $t$ with an initial understanding $U_0$ and a rate of increase $r_U$ that is proportional to the product of the quality and frequency of questions:
 
 \[
-U_t = U_0 + r_U t
+U_t = U_0 + r_U Q_t F_t
 \]
 
-\section{Implementation}
+Where $Q_t$ represents the quality of questions over time, which increases exponentially.
 
-The \texttt{Person} class in Python is implemented with these models. Each instance of the class represents an individual with a specific initial frequency of questioning, initial understanding, and rates of change. The class also includes methods for simulating the processes over time and for visualizing the results.
+\begin{figure}[ht]
+\centering
+\includegraphics[width=0.7\textwidth]{combined_plot.png}
+\caption{Combined Plot of Persons}
+\label{fig:combinedplot}
+\end{figure}
 
 \section{Discussion}
 
-The model provides a simplified representation of the complex processes of human questioning and understanding development. Although it does not capture all the nuances of these processes, it offers a starting point for understanding their dynamics and how they might change under different conditions.
+The model provides a highly simplified representation of the complex processes of human questioning and understanding development. Although it does not capture all the nuances of these processes, it offers a starting point for understanding their dynamics and how they might change under different conditions.
+
+\subsection{Person 1}
+
+Person 1, who experiences the strongest increase in the quality of questions and level of understanding, sees the largest decrease in the frequency of questions over time. This is based on the correlation that an increase in the quality of questions and level of understanding causes a decrease in the frequency of questions. A similar pattern can be observed for Person 2 and Person 3, though the changes are less pronounced.
+
+\subsection{Person 2}
+
+Person 2 exhibits a moderate increase in the quality of questions and level of understanding, resulting in a gradual decrease in the frequency of questions over time. The changes in frequency, quality, and understanding are less pronounced compared to Person 1.
+
+\subsection{Person 3}
+
+Person 3 shows a relatively slower increase in the quality of questions and level of understanding. As a result, the decrease in the frequency of questions over time is less significant compared to Person 1 and Person 2.
 
 \section{Perception, Time, and the Pursuit of Eternity}
 
-In the pursuit of understanding, there comes a time when the average used categories of perception align perfectly with the perception-patterns of reality. This is the moment when our known categories are sufficient to comprehend the moment entirely. Mathematically, this can be represented as the limit of a function approaching infinity as the denominator approaches zero. This concept resonates with Gerhard Vollmer's Evolutionary Epistemology, suggesting that our cognitive structures evolve to understand our environment better.
+In the pursuit of understanding, there comes a time when the average used categories of perception align perfectly with the perception-patterns of reality. This is the moment when our known categories are sufficient to comprehend the moment entirely. This is the point where the second layer mentioned in Section~\ref{sec:assumptions} comes into play. Only when the global trends of our questioning patterns are observable, then we can start to benchmark them against reality.
 
-There is a possibility of stagnation if the answer fits the question perfectly. However, this is only applicable for those who do not question what they observe.
+The concept of a horizontal asymptote can be used to explain this idea mathematically. A horizontal asymptote is a line that the graph of a function approaches but never touches as the value of $x$ tends towards infinity. This concept implies that the comprehension of reality tends towards perfect alignment with the categories of perception but never completely reaches it.
+
+This concept resonates with Gerhard Vollmer's Evolutionary Epistemology, suggesting that our cognitive structures evolve to understand our environment better.
 
 \section{Conclusion}
 
-The key to achieving eternity lies in identifying and overcoming our greatest weakness. In a life where an individual fails to recognize patterns and dynamics (single-case-life), each day unfolds as a new exciting adventure, and time becomes a precious commodity. Conversely, in a life where past experiences are recognized in latent mechanisms and dynamics (abstract-case-life), time loses importance as one can anticipate what has happened and what will happen - time becomes eternal.
-
-We constantly maneuver between these two poles. Every thinking being understands and recognizes reality on some level of abstraction. The question answered here is that to understand why reality is perceived the way it is, one has to trace back the underlying patterns of daily life to the determining factor. Once this is done, all other actions taken in an unconscious state become unimportant, fall away, and what remains is more time or even eternity.
+In a life where an individual fails to recognize patterns and dynamics (single-case-life), each day unfolds as a new exciting adventure, and time becomes a precious commodity. Conversely, in a life where past experiences are recognized in latent mechanisms and dynamics (abstract-case-life), time loses importance as one can anticipate what has happened and what will happen - time becomes eternal.
 
 \end{document}
