1 out of 3 to publish, reread, tune, deploy to linkedin

--- a/README.tex
+++ b/README.tex
@@ -26,7 +26,7 @@
 
     \section{Questioning and Understanding: A Model}
 
-    The described dynamics are based on two key assumptions:
+    The described dynamics are based on a two layered approach:
     \begin{enumerate}
         \item We can understand the dynamics and mechanisms of the human mind's data processing to a certain extent when we compare it in two layers. The second layer is predicated on achieving the first layer, as it requires a broad understanding of personal questioning patterns:
         \begin{itemize}
